edit kernal production properties

--- a/config/kernel-production.properties
+++ b/config/kernel-production.properties
@@ -1,6 +1,6 @@
 #---------------------------------------kernel common properties-----------------------
-mosip.kernel.database.hostname={{ db_hostname }}
-mosip.kernel.database.port={{ db_port }}
+mosip.kernel.database.hostname={{ mosipdb }}
+mosip.kernel.database.port={{ 5432 }}
 
 
 #---------------------------------------Sync Data service-------------------------------
@@ -45,9 +45,9 @@ mosip.kernel.sms.sender=MOSMSG
 #host being used.
 spring.mail.host=smtp.gmail.com
 #user mail id, from which the mail will be sent.
-spring.mail.username=<SPRING-MAIL-USERNAME>
+spring.mail.username=me.test.you.too@gmail.com
 #user password, password to authenticate the above mail address.
-spring.mail.password=<SPRING-MAIL-PASSWORD>
+spring.mail.password=account_4_test
 #port being used.
 spring.mail.port=587
 #protocol being used.
